// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Steps Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn bxEzyD coYthk sc-hjriPb kqmSyb"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds kHbOVG sc-hHLeRK cGKEdj"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-dUWWNf iKIurY ioeYtu"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              These are
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-dUWWNf iKIurY ioeYtu"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              all completed
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-dUWWNf iKIurY ioeYtu"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              and not clickable
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Steps Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn bxEzyD coYthk sc-hjriPb kqmSyb"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds kHbOVG sc-hHLeRK cGKEdj"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-dUWWNf iKIurY ioeYtu"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              These are
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds esEVfz sc-hHLeRK sc-dUWWNf iKIurY ioeYtu fa-layers"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle "
                data-icon="circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF sc-hsOonA hDTZWg fa-layers-text fa-inverse"
              >
                2
              </div>
            </div>
            <div
              class="sc-ivTmOn fSbxau sc-cxabCf hcBkUF"
            >
              all completed
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#bbc8d6"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds hdgZGZ sc-hHLeRK sc-dUWWNf iKIurY ioeYtu fa-layers"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-caXVBt TZjTE"
              />
              <div
                class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF sc-hsOonA hDTZWg fa-layers-text"
              >
                3
              </div>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              and not clickable
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Steps With Custom Title 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn bxEzyD coYthk sc-hjriPb kqmSyb"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds GPkRS sc-hHLeRK efXsRo"
      >
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf gvOJna"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-signs-post "
            data-icon="signs-post"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M223.1 32C223.1 14.33 238.3 0 255.1 0C273.7 0 288 14.33 288 32H441.4C445.6 32 449.7 33.69 452.7 36.69L500.7 84.69C506.9 90.93 506.9 101.1 500.7 107.3L452.7 155.3C449.7 158.3 445.6 160 441.4 160H63.1C46.33 160 31.1 145.7 31.1 128V64C31.1 46.33 46.33 32 63.1 32L223.1 32zM480 320C480 337.7 465.7 352 448 352H70.63C66.38 352 62.31 350.3 59.31 347.3L11.31 299.3C5.065 293.1 5.065 282.9 11.31 276.7L59.31 228.7C62.31 225.7 66.38 223.1 70.63 223.1H223.1V191.1H288V223.1H448C465.7 223.1 480 238.3 480 255.1V320zM255.1 512C238.3 512 223.1 497.7 223.1 480V384H288V480C288 497.7 273.7 512 255.1 512z"
              fill="currentColor"
            />
          </svg>
        </div>
        <h6
          class="sc-ciZhAO iJFBxw sc-jOrMOR KGDhW"
        >
          Beginners Guide
        </h6>
      </div>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds kHbOVG sc-hHLeRK cGKEdj"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-dUWWNf iKIurY ioeYtu"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              These are
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-dUWWNf iKIurY ioeYtu"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              all completed
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-dUWWNf iKIurY ioeYtu"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              and not clickable
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Steps Without Borders 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn bxEzyD gXAAKr sc-hjriPb kqmSyb"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds kHbOVG sc-hHLeRK cGKEdj"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-dUWWNf iKIurY ioeYtu"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <a
              class="sc-eKBdFk eDgBSD sc-bUbCnL aUvHI"
              color="primary.main"
            >
              Doesn't have
            </a>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds hdgZGZ sc-hHLeRK sc-dUWWNf iKIurY ioeYtu"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <a
              class="sc-eKBdFk eDgBSD sc-bUbCnL aUvHI"
              color="primary.main"
            >
              Title or dismiss button
            </a>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <a
              class="sc-eKBdFk eDgBSD sc-bUbCnL aUvHI"
              color="primary.main"
            >
              That's it (no icon)
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
